[tool.poetry]
name = "njet"
version = "0.1.0"
description = "Leightweight automatic differentiation package for higher-order differentiation."
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
