[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "njet"
version = "0.4.6"
description = "Lightweight automatic differentiation package for higher-order differentiation."
authors = [ "Malte Titze <mtitze@users.noreply.github.com>",]
license = "GPL-3.0-or-later"
homepage = "https://njet.readthedocs.io/en/latest/index.html"
repository = "https://github.com/mtitze/njet"
keywords = [ "AD", "jet", "njet", "automatic", "differentiation",]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.22"
sympy = "^1.8"
more_itertools = ">=9.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
